--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,12 @@
 language: ruby
 rvm:
   - 1.8.7
-script: "rake spec"
+install: gem install puppet
+script: "puppet-lint manifests/init.pp"
 branches:
   only:
     - master
 env:
   - PUPPET_VERSION=2.7.17
-  - PUPPET_VERSION=2.7.13
-  - PUPPET_VERSION=2.7.9
-  - PUPPET_VERSION=2.6.9
 notifications:
   email: false
-gemfile: .gemfile
